Adjusted Flickr call to find better photos.

--- a/templates/index.html
+++ b/templates/index.html
@@ -65,7 +65,7 @@
                             <div class="card-header">
                                 <h2>
                                     <button class="btn btn-link text-left" type="button" data-toggle="collapse" data-target="#photo-{{ loop.index }}">
-                                        Photo {{ photo.id }}
+                                        Photo {{ photo.title }}
                                     </button>
                                 </h2>
                             </div>
