Fixed map link.

--- a/templates/index.html
+++ b/templates/index.html
@@ -81,7 +81,7 @@
 
                     <!-- This is the additional links section -->
                     <div class="list-group mt-5">
-                        <a href="#" class="list-group-item list-group-item-action">Map</a>
+                        <a href="/map/" class="list-group-item list-group-item-action">Map</a>
                         <a href="/credits/" class="list-group-item list-group-item-action">Credits</a>
                     </div>
                 </div>
